--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -159,3 +159,20 @@ section {
     clip: rect(1px, 1px, 1px, 1px);
     position: absolute !important
 }
+#filter, #filter2 {
+    position:absolute;
+}
+#animated-menu ul > li > a {
+    font-family: 'Pangolin', cursive;
+    color:black;
+    text-transform: uppercase;
+    font-size:20px;
+}
+#animated-menu ul > li > a:nth-child(even) {
+    -webkit-filter: url("#filter");
+    filter: url("#filter");
+}
+#animated-menu ul > li > a:nth-child(odd) {
+    -webkit-filter: url("#filter2");
+    filter: url("#filter2");
+}
