--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -199,6 +199,12 @@ section {
 #animated-menu {
     text-align: center;
 }
+#searchsubmit {
+    background-color:transparent;
+    color: #66ff66;
+    border:1px solid  #66ff66;
+  
+}
 #sidebar {
     padding-top:50px;
     background-color:black;
@@ -209,6 +215,16 @@ section {
     width:250px;
     height:100%;
     overflow-y: auto;
+    padding-right: 45px;
+    padding-left:5px;
+    color:grey;
+}
+#sidebar a:link, #sidebar a:visited {
+    color:white;
+}
+#sidebar h3 {
+    color: #66ff66;
+    font-size:22px;
 }
 #whole-main-content-wrapper {
     padding:0 60px;
@@ -218,7 +234,7 @@ section {
 #slide-out-menu-tag {
     position: absolute;
     right:0;
-    color:white;
+    color:#66ff66;
     transform: rotate(90deg);
     top:50%;
 }
