--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -238,3 +238,8 @@ section {
     transform: rotate(90deg);
     top:50%;
 }
+.hobby1, .hobby2, .hobby3, .hobby4, .hobby5 {
+    position: absolute;
+    z-index:99999;
+    opacity:0;
+}
