--- a/wp-content/themes/Divi-child/style.css
+++ b/wp-content/themes/Divi-child/style.css
@@ -2,7 +2,7 @@
 Theme Name: Divi Child
 Theme URI: http://www.elegantthemes.com/gallery/divi/
 Template: Divi
-Author: Elegant Themes
+Author: Thomas Flock
 Author URI: http://www.elegantthemes.com
 Description: Smart. Flexible. Beautiful. Divi is the most powerful theme in our collection.
 Tags: responsive-layout,one-column,two-columns,three-columns,four-columns,left-sidebar,right-sidebar,custom-background,custom-colors,featured-images,full-width-template,post-formats,rtl-language-support,theme-options,threaded-comments,translation-ready
