--- a/wp-content/themes/Divi-child/style.css
+++ b/wp-content/themes/Divi-child/style.css
@@ -10,6 +10,8 @@ Version: 3.0.89.1511226712
 Updated: 2017-11-21 01:11:52
 
 */
+
+
 /*
 Fonts from google
 font-family: 'Indie Flower', cursive;
@@ -28,22 +30,80 @@ font-family: 'Bungee Shade', cursive;
 font-family: 'Give You Glory', cursive;
 font-family: 'Crushed', cursive;
 */
+#main-index-template-body {
+    overflow: hidden;
+}
 .hobby3 video {
-    max-width:400px;
+    max-width: 400px;
     height: auto;
 }
+
 #work-all-the-time {
     opacity: 0;
 }
+
 #main-intro-module h1 {
     font-family: 'Amatic SC', cursive;
-    font-size:7vw;
+    font-size: 7vw;
 }
+
 #main-intro-module p:last-child {
     font-family: 'Indie Flower', cursive;
     font-size: 5vw;
-    margin-top:20px;
+    margin-top: 20px;
+}
+#test-div {
+    position:fixed;
+    top:30px;
+    left:0;
+    z-index:99999;
 }
 #always-under-construction {
     font-family: 'Neucha', cursive;
+}
+#main-article-wrapper {
+    position:relative;
+    width:100%;
+    height:100%;
+}
+#article1 {
+    background-color:yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#article2 {
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#article3 {
+    background-color: orange;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#article4 { 
+    background-color: purple
+    display: flex;
+    align-items: center;
+    justify-content: center;;
+}
+
+#article5 {
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#article6 {
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
