--- a/wp-content/themes/Divi-child/style.css
+++ b/wp-content/themes/Divi-child/style.css
@@ -65,45 +65,22 @@ font-family: 'Crushed', cursive;
     position:relative;
     width:100%;
     height:100%;
+    perspective: 1000px;
 }
-#article1 {
-    background-color:yellow;
+#article1, #article2, #article3, #article4, #article5, #article6 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-#article2 {
-    background-color: blue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#welcomeLeft, #welcomeRight {
+    width:50%;
+    box-sizing: border-box;
 }
-
-#article3 {
-    background-color: orange;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#welcomeLeft {
+   padding-right:10px;
+    text-align: right;
 }
-
-#article4 { 
-    background-color: purple
-    display: flex;
-    align-items: center;
-    justify-content: center;;
-}
-
-#article5 {
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#article6 {
-    background-color: green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#welcomeRight {
+    padding-left:10px;
+    border-left:5px solid black;
 }
